[workspace]
members = [
	"client/orchestrator-chain-interface",
	"client/orchestrator-chain-rpc-interface",
	"container-chain-pallets/*",
	"container-chain-primitives/*",
	"pallets/*",
	"primitives/*",
	"test-sproof-builder",
]
resolver = "2"

[workspace.package]
authors = [ "Moondance Labs" ]
repository = "https://github.com/moondance-labs/dancekit"

[workspace.dependencies]

ccp-authorities-noting-inherent = { path = "container-chain-primitives/authorities-noting-inherent", default-features = false }
ccp-xcm = { path = "container-chain-primitives/xcm", default-features = false }
pallet-cc-authorities-noting = { path = "container-chain-pallets/authorities-noting", default-features = false }

dc-orchestrator-chain-interface = { path = "client/orchestrator-chain-interface" }
dc-orchestrator-chain-rpc-interface = { path = "client/orchestrator-chain-rpc-interface" }
dp-chain-state-snapshot = { path = "primitives/chain-state-snapshot", default-features = false }
dp-collator-assignment = { path = "primitives/collator-assignment", default-features = false }
dp-consensus = { path = "primitives/consensus", default-features = false }
dp-core = { path = "primitives/core", default-features = false }
dp-impl-tanssi-pallets-config = { path = "primitives/core", default-features = false }
test-relay-sproof-builder = { path = "test-sproof-builder", default-features = false }

# Moonkit (wasm)
nimbus-primitives = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "main", default-features = false }
pallet-author-inherent = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "main", default-features = false }
pallet-migrations = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "main", default-features = false }

# Substrate (wasm)
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.11.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.11.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info = { version = "2.11.2", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.11.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.11.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.11.0", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# Substrate (client)
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
substrate-test-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }

# Polkadot (wasm)
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
staging-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
staging-xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# Polkadot (client)
polkadot-overseer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# Cumulus (wasm)
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# Cumulus (client)
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# General (wasm)
async-io = "1.3"
hex-literal = { version = "0.3.4" }
impls = "1.0.3"
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.152", default-features = false }
serde_json = { version = "1.0.96", default-features = false }
smallvec = "1.10.0"

# General (client)
async-trait = "0.1"
futures = { version = "0.3.1" }
hex = { version = "0.4.3", default-features = false }
jsonrpsee = { version = "0.22" }
schnellru = "0.2.1"
thiserror = { version = "1.0.40" }
tokio = { version = "1.32.0", default-features = false }
tokio-stream = "0.1.15"
tracing = { version = "0.1.37", default-features = false }
url = "2.2.2"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.release]
opt-level = 3
panic = "unwind"
