[package]
name = "test-relay-sproof-builder"
authors = []
edition = "2021"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
dp-collator-assignment = { workspace = true, optional = true }
dp-core = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, optional = true, features = [ "derive", "max-encoded-len" ] }

# Substrate
frame-support = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-state-machine = { workspace = true, optional = true }
sp-trie = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true, optional = true }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"dp-collator-assignment/std",
	"dp-core/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-trie/std",
]
