[package]
name = "dc-orchestrator-chain-interface"
authors = { workspace = true }
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Dancekit
dp-container-chain-genesis-data = { workspace = true }
dp-core = { workspace = true }

# Substrate
sc-client-api = { workspace = true }
sp-api = { workspace = true, features = [ "std" ] }
sp-blockchain = { workspace = true }
sp-state-machine = { workspace = true, features = [ "std" ] }

# Polkadot
polkadot-overseer = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true, features = [ "std" ] }
