[package]
name = "ccp-authorities-noting-inherent"
authors = { workspace = true }
description = "client-side authorities-noting-inherent primitives"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info = { workspace = true }
tracing = { workspace = true, optional = true }

ccp-authorities-noting-inherent-core = { workspace = true }
dc-orchestrator-chain-interface = { workspace = true, optional = true }
dp-collator-assignment = { workspace = true, optional = true }
dp-core = { workspace = true, optional = true }
test-relay-sproof-builder = { workspace = true, optional = true }

# Substrate
sp-consensus-aura = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true, optional = true }
sp-state-machine = { workspace = true, optional = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }
sp-version = { workspace = true }

nimbus-primitives = { workspace = true, optional = true }

# Cumulus
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true, optional = true }
cumulus-relay-chain-interface = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true }
polkadot-overseer = { workspace = true }
polkadot-primitives = { workspace = true }
sc-client-api = { workspace = true }
substrate-test-runtime = { workspace = true }
substrate-test-runtime-client = { workspace = true }
tokio = { workspace = true }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-relay-chain-interface",
	"ccp-authorities-noting-inherent-core/std",
	"dc-orchestrator-chain-interface",
	"dp-collator-assignment/std",
	"dp-core/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"polkadot-primitives/std",
	"scale-info/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime",
	"sp-runtime?/std",
	"sp-state-machine",
	"sp-state-machine?/std",
	"sp-std/std",
	"sp-trie/std",
	"sp-version/std",
	"test-relay-sproof-builder/std",
	"tracing",
	"tracing?/std",
]
