[package]
name = "pallet-assets-filtering"
authors = { workspace = true }
description = "Assets filtering pallet"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
staging-xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "staging-xcm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
