[package]
name = "pallet-xcm-executor-utils"
authors = { workspace = true }
description = "XCM Executor configuration utility pallet"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lints]
workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
staging-xcm = { workspace = true }

# Dancekit
dp-xcm-reserve = { workspace = true }

# Moonkit
pallet-migrations = { workspace = true }


[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-migrations/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"staging-xcm/std",
	"dp-xcm-reserve/std"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-migrations/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staging-xcm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-migrations/try-runtime",
	"sp-runtime/try-runtime",
]
