[package]
name = "dp-xcm-reserve"
authors = { workspace = true }
description = "Dancekit xcm reserve primitives"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lints]
workspace = true

[dependencies]
hex-literal = { workspace = true }
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
staging-xcm = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"log/std",
	"staging-xcm/std"
]
