[package]
name = "dp-xcm-reserve"
authors = { workspace = true }
description = "Dancekit xcm reserve primitives"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lints]
workspace = true

[dependencies]
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
staging-xcm = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"log/std",
	"staging-xcm/std"
]
